# cop-thief-p2p

./: .gitignore  README.md  pyproject.toml
config/: game.json
config/police/: game.toml
config/thief/: game.toml
docs/: architecture.md  assumptions.md  final_audit.md  implementation_plan.md  progress.md  protocol.md  requirements_analysis.md  requirements_traceability.md  testing_strategy.md
scripts/: run_demo.ps1  run_police.ps1  run_tests.ps1  run_thief.ps1
src/police_thief/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  orchestrator.py  peer_runtime.py
src/police_thief/domain/: __init__.py  board.py  crypto.py  models.py  scent.py  scoring.py  state_machine.py
src/police_thief/gui/: __init__.py  live_view.py  replay_viewer.py
src/police_thief/infra/: __init__.py  gatekeeper.py  gmail_report.py  mcp_client.py  mcp_server.py  protocol.py  reporting.py  tunnel.py  watchdog.py
src/police_thief/strategy/: __init__.py  base.py  heuristic.py
tests/e2e/: test_two_peer_local_game.py
tests/integration/: test_two_peer_game.py
tests/network/: test_mcp_transport.py
tests/unit/: conftest.py  test_board.py  test_config.py  test_crypto.py  test_gatekeeper.py  test_gmail_report.py  test_live_view_render.py  test_logging_setup.py  test_orchestrator.py  test_replay_viewer.py  test_reporting.py  test_scent.py  test_scoring.py  test_state_machine.py  test_strategy.py  test_tunnel.py  test_watchdog.py
