[project]
name = "police-thief-p2p"
version = "0.1.0"
description = "Distributed Cops-and-Robbers over a Peer-to-Peer Network (AI Orchestration final project)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3",
    "pydantic>=2.6",
    "google-api-python-client>=2.130",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2",
]

[project.scripts]
police-thief = "police_thief.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/police_thief"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["police_thief"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google.oauth2.*", "google.auth.*", "google_auth_oauthlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src"]
